# structinator-dev

./: README.md  README.rst  build-pyproj.sh  pyproject.toml
docs/source/: conf.py  data.rst  index.rst  modules.rst  structinator.rst
scripts/: build-pyproj.sh
scripts/include/: common-bash-utils.sh
src/structinator/: exceptions.py  header_file_tools.py  xml_tools.py
src/structinator-scripts/: structinator  structinator_cli.py
src/structinator/data/: basic_struct_example_1.xml  basic_struct_example_1.xsd  header_file_template_1.txt
tests/: test_xml_tools.py
tests/data/: struct_source_data_good.xml  struct_source_data_missing_header.xml  struct_source_data_missing_members.xml  struct_source_data_missing_structs.xml  struct_source_data_missing_template.xml
